--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>مولد أوامر ADB</title>
     
-    <meta name="theme-color" content="#FFFFFF">
+    <meta name="theme-color" content="#f3f4f6">
   <link rel="manifest" href="manifest.json">
   <link rel="icon" href="icon-1440.png">
   <link rel="apple-touch-icon" href="icon-1440.png">
